ingress/service-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: service.local
      http:
        paths:
          - path: /payload
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8081
    - host: service.local
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8081
